Fixed z-index issues with content

--- a/htdocs/typo3conf/ext/t3theme_typo3com/Resources/Private/Styles/Layout/_Content.scss
+++ b/htdocs/typo3conf/ext/t3theme_typo3com/Resources/Private/Styles/Layout/_Content.scss
@@ -1,3 +1,8 @@
+main.content {
+  position: relative;
+  z-index : 15;
+}
+
 //
 // Text Alignment
 //
